# switchshop

./: readme.md
.github/workflows/: api.yml  infrastructure.yml  ui.yml  ui_react.yml
infrastructure/: cf.yml
services/api/: .env.development  create_dynamodb_locally.py  main.py  models.py  package.json  pyproject.toml  schemas.py  serverless.yml  store.py  tests.py
services/api/docker/dynamodb/: shared-local-instance.db
services/api/resources/: cognito.yml  dynamodb.yml
services/api/stores/: product_inventory_store.py
services/react_ui/: package-lock.json  package.json  serverless.yml
services/ui/: index.html  package-lock.json  package.json  serverless.yml  tailwind.config.ts  vite.config.js
services/ui/src/:  aws-exports.ts  App.vue  global.css  main.ts
services/ui/src/auth/: getConfiguration.ts
services/ui/src/components/Forms/: ProductInventoryForm.vue
services/ui/src/components/NavigationMenu/: NavigationMenu.vue  NavigationMenuListItem.vue  style.css
services/ui/src/components/Splitter/: Splitter.vue  style.css
services/ui/src/components/Table/: ProductInventoryTable.vue
services/ui/src/layouts/: CreateProductInventoryLayout.vue  ProductInventoryLayout.vue
